@@ -16,6 +16,8 @@ Changelog for LedgerSMB 1.3.6
 * Corrected permission denied to partsgroup_id_seq (Chris T)
 * Corrected discount_terms not being displayed after saving (Chris T)
 * Corrected language drop-down missing from email form (Chris T)
+* Customer search result label correction (Herman V)
+* Company name can now be prepopulated on login screen (Chris T)
 
 Chris T is Chris Travers
 David B is David Bandel
